<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_app_background"
    android:orientation="vertical"
    tools:context=".views.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/screen_header"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/lbl_login_mobile_no" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/screen_header"
            android:layout_gravity="center"
            android:text="@string/lbl_login_mobile_no_or" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/monstserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lineHeight="25dp"
            android:text="@string/lbl_login_desc"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobileNo"
            style="@style/et_wrap_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:hint="@string/hint_mobile_no"
            android:inputType="text|number"
            android:paddingBottom="@dimen/_20sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/bt_match_content"
            android:background="@drawable/bg_button_blue"
            android:text="@string/lbl_btn_next"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUpMessage"
            style="@style/monstserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/lbl_signup"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>