<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_role_select_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/lexcru_white_logo" />


    <RelativeLayout
        android:id="@+id/rlDealer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_button_blue"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_dealer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_80sdp"
            android:src="@drawable/ic_dealer" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/monstserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_toRightOf="@+id/iv_dealer"
            android:text="@string/lbl_dealer"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSubdealer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/bg_button_blue"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_subdealer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_80sdp"
            android:src="@drawable/ic_subdealer" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/monstserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_toRightOf="@+id/iv_subdealer"
            android:text="@string/lbl_subdealer"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rltechnician"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_button_blue"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_technician"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_80sdp"
            android:src="@drawable/ic_technician" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/monstserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_toRightOf="@+id/iv_technician"
            android:text="@string/lbl_technician"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_blue"
        android:paddingTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/monstserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/lbl_login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </RelativeLayout>

</LinearLayout>